fix css bug with long first name (width too long in this case)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -173,6 +173,8 @@ a.selected {
     padding: 15px;
     text-align: center;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    width: 8em;
+    max-width: 8em;
 }
 
 /* Simple Table */
